# programming-notes

./: 404.html  Dockerfile  GraphQL.md  LICENSE  Markdown.md  README.adoc  README.md  RegularExpressions.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yml
Android/: Activity.kt.md  Adapter.kt.md  Firebase.md  Fragment.md  Gradle & Building.md  MapsActivity.md  SQLite.md  activity.xml.md
Bash/: Bash Commands.md  Bash Scripting.md
C++/: C++.md  cpp.md
CSS/: CSS.md
Database/: MongoDB.md  Redis.md  SQL.md
Git/: git.md
HTML/: HTML.md  boilerplate.html
Java/: DAO.md  Java Collection Framework.md  Java.md
JavaScript/: AJAX.md  DOM.md  Events & Animation.md  JavaScript.md  jQuery.md
Kotlin/: kotlin.md
Node.js/: Node.js.md
PHP/: Composer & Autoloading.md  Database.md  Dependecy Injection.md  PHP Composer & Autoloading.md  PHP Dependecy Injection.md  PHP Templates with Plates.md  PHP Web.md  PHP.md  PSR-7.md  Templates with Plates.md  Unit Testing.md  Web.md
PowerShell/: Powershell Commands.md  Powershell Scripting.md
Python/: Python.md
Rust/: Cargo.md  Rust.md  Unit Tests.md
Swift/: Swift.md
bash/: commands.md
containers/: docker.html  kubernetes.html
css/: css.md
database/: mongo-db.md
databases/: mongo-db.html  redis.html  sql.html
docs/: README.adoc  index.md  markdown.md
html/: html.md
iOS/: App (XCode 12).md  AppDelegate (XCode 11) .md  ContentView.md  CoreData.md  SceneDelegate (XCode 11).md
img/: android_activity-lifecycle.avif  android_fragment-lifecycle.avif  git_branches.avif  (+12 more)
(+476 files in other folders)
