[project]
name = "programming-notes"
version = "0.1.0"
license = "MIT"
authors = [
  { name = "Marcello Lamonaca", email = "<marcello@lamonaca.eu>" }
]

dependencies = [
  "mkdocs >= 1.4.3",
  "mkdocs-material >= 9.5.5",
  "pillow >= 10.2.0",
  "cairosvg >= 2.7.0"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
