[project]
name = "programming-notes"
version = "0.1.0"
description = ""
authors = [{ name = "Marcello Lamonaca", email = "marcello@lamonaca.eu" }]
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.23",
    "pillow>=10.3.0",
    "cairosvg>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true

